infra/k8s/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atina-saas
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: api.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prod-atina-saas
                port:
                  number: 80
    - host: nest.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prod-nest-api
                port:
                  number: 80
    - host: app.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prod-omnigroup-web
                port:
                  number: 80
